networkpolicy/allow_namespace.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: BACKEND_NAMESPACE
spec:
  podSelector:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
