networkpolicy/backend_to_db.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: DATABASE_NAMESPACE
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: DATABASE_NAMESPACE
spec:
  podSelector:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-backend-to-database
  namespace: DATABASE_NAMESPACE
spec:
  podSelector:
    matchLabels:
      name: DATABASE_SERVICE_NAME
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: BACKEND_NAMESPACE
    ports:
    - protocol: TCP
      port: 3306
