networkpolicy/deny_all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
  namespace: BACKEND_NAMESPACE
spec:
  podSelector: {}
  policyTypes:
  - Ingress
